backend/kubernetes/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: ghcr.io/tomdieu/wikiculture/comment_service:latest
          ports:
            - containerPort: 8002
          command: ["python", "manage.py", "runserver", "0.0.0.0:8002"]

          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "250m"
        - name: consumer
          image: ghcr.io/tomdieu/wikiculture/comment_service:latest
          command: ["python", "consumer.py"]

          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
