backend/kubernetes/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.17.16
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: esdata
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "1Gi"
        # - name: kibana
        #   image: kibana:7.17.16
        #   ports:
        #     - containerPort: 5601
        #   env:
        #     - name: ELASTICSEARCH_HOSTS
        #       value: http://elasticsearch:9200
        #   resources:
        #     limits:
        #       memory: "1Gi"
        #     requests:
        #       memory: "1Gi"
      volumes:
        - name: esdata
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
      name: elastic
    # - protocol: TCP
    #   port: 5601
    #   targetPort: 5601
    #   name: kibana
