backend/kubernetes/media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      volumes:
        - name: media-static-volume
          emptyDir: {}
      containers:
        - name: media-service
          image: ghcr.io/tomdieu/wikiculture/media_service:latest
          ports:
            - containerPort: 8003
          command: ["python", "manage.py", "runserver", "0.0.0.0:8003"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "550m"
          volumeMounts:
            - name: media-static-volume
              mountPath: /media_files/staticfiles
        - name: consumer
          image: ghcr.io/tomdieu/wikiculture/media_service:latest
          command: ["python", "consumer.py"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "450m"

---
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: media-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
