backend/kubernetes/moderator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator-service
  template:
    metadata:
      labels:
        app: moderator-service
    spec:
      volumes:
        - name: moderator-static-volume
          emptyDir: {}
      containers:
        - name: moderator-service
          image: ghcr.io/tomdieu/wikiculture/moderator_service:latest
          ports:
            - containerPort: 8005
          command: ["python", "manage.py", "runserver", "0.0.0.0:8005"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - name: moderator-static-volume
              mountPath: /moderator/staticfiles
        - name: consumer
          image: ghcr.io/tomdieu/wikiculture/moderator_service:latest
          command: ["python", "consumer.py"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: moderator-service
spec:
  selector:
    app: moderator-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
