backend/kubernetes/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      volumes:
        - name: search-static-volume
          emptyDir: {}
      containers:
        - name: search-service
          image: ghcr.io/tomdieu/wikiculture/search_service:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8004
          command: ["python", "manage.py", "runserver", "0.0.0.0:8004"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - name: search-static-volume
              mountPath: /search/staticfiles
        - name: consumer
          image: ghcr.io/tomdieu/wikiculture/search_service:latest
          command: ["python", "consumer.py"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
