backend/kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      volumes:
        - name: users-static-volume
          emptyDir: {}
      containers:
        - name: user-service
          image: ghcr.io/tomdieu/wikiculture/user_service:latest
          ports:
            - containerPort: 8000
          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - name: users-static-volume
              mountPath: /users/staticfiles

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
